--- a/.github/workflows/grapl-staging-release.yml
+++ b/.github/workflows/grapl-staging-release.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build Rust services
         run: |
-          GRAPL_RELEASE_TARGET=release ./dobi-linux --no-bind-mount rust
+          GRAPL_RELEASE_TARGET=release ./dobi-linux rust
 
       - name: Log in to Docker registry
         run: |
