add a release to grapl-tests-common, make it more generic

--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -117,3 +117,5 @@ jobs:
                 true
           fi
           deactivate
+      
+      # TODO: Once grapl-tests-common is on pypi, add the pypi check.
