--- a/src/js/engagement_view/Dockerfile
+++ b/src/js/engagement_view/Dockerfile
@@ -7,3 +7,6 @@ RUN yarn build
 
 FROM syntaqx/serve AS grapl-engagement-view
 COPY --from=engagement-view-build /grapl/build/ /var/www
+
+# no-op the base image cmd, so it doesn't launch a Node repl
+CMD :
