--- a/docker/Dockerfile.rust
+++ b/docker/Dockerfile.rust
@@ -5,3 +5,19 @@ ENV PROTOC /usr/bin/protoc
 ENV PROTOC_INCLUDE /usr/include
 
 RUN rustup target add x86_64-unknown-linux-musl
+
+CMD bash -c ' \
+    if test -n "${CARGO_CLEAN}"; then cargo clean; fi && \
+    if test "${RELEASE_TARGET}" = "release"; then \
+      cargo build --target=x86_64-unknown-linux-musl --release; \
+    elif test "${RELEASE_TARGET}" = "debug"; then \
+      cargo build --target=x86_64-unknown-linux-musl; \
+    fi && \
+    cd target/x86_64-unknown-linux-musl/${RELEASE_TARGET} && \
+    cp analyzer-dispatcher /home/grapl/dist/ && \
+    cp generic-subgraph-generator /home/grapl/dist/ && \
+    cp graph-merger /home/grapl/dist/ && \
+    cp metric-forwarder /home/grapl/dist/ && \
+    cp node-identifier /home/grapl/dist/ && \
+    cp node-identifier-retry-handler /home/grapl/dist/ && \
+    cp sysmon-subgraph-generator /home/grapl/dist/'
