--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -164,6 +164,16 @@ jobs:
           asset_name: ${{ steps.extract-rust-artifacts.outputs.sysmon-subgraph-generator }}
           asset_content_type: application/zip
 
+      - name: Upload osquery-subgraph-generator to Github
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./${{ steps.extract-rust-artifacts.outputs.osquery-subgraph-generator }}
+          asset_name: ${{ steps.extract-rust-artifacts.outputs.osquery-subgraph-generator }}
+          asset_content_type: application/zip
+
       - name: Upload generic-subgraph-generator to Github
         uses: actions/upload-release-asset@v1
         env:
