--- a/src/rust/generators/osquery-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/osquery-subgraph-generator/Cargo.toml
@@ -7,3 +7,24 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+grapl-graph-descriptions = { path="../../graph-descriptions", version="*" }
+grapl-config = { path = "../../grapl-config", version="*" }
+grapl-observe = { path = "../../grapl-observe", version="*" }
+graph-generator-lib = { path="../graph-generator-lib", version="*" }
+
+sqs-lambda = "0.20.*"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+failure = "0.1.*"
+log = "0.4.3"
+regex = "1.3.9"
+
+rusoto_s3 = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.43.0", default_features = false, features=["rustls"]}
+
+lambda_runtime = "0.2.*"
+async-trait = "0.1.31"
+zstd = "0.5.1"
+tokio-compat = "0.1.*"
+tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
