--- a/src/js/engagement_view/Dockerfile
+++ b/src/js/engagement_view/Dockerfile
@@ -1,7 +1,12 @@
 FROM node:alpine3.10 AS engagement-view-build
 RUN apk add bash
+
+ARG USERID="1000:1000"
+USER $USERID
 WORKDIR /grapl
+
 COPY . .
+
 RUN yarn install
 RUN yarn build
 
