--- a/src/python/grapl-notebook/Dockerfile
+++ b/src/python/grapl-notebook/Dockerfile
@@ -1,8 +1,13 @@
 FROM jupyter/minimal-notebook
 
-RUN pip install --user --upgrade grapl_analyzerlib
-COPY ./jupyter_notebook_config.py /home/jovyan/.jupyter/jupyter_notebook_config.py
-COPY ./Demo_Engagement.ipynb /home/jovyan/
+COPY --chown=jovyan grapl_analyzerlib grapl_analyzerlib
+RUN bash -c ' \
+    cd grapl_analyzerlib && \
+    pip install . && \
+    python setup.py sdist bdist_wheel'
+
+COPY --chown=jovyan grapl-notebook/jupyter_notebook_config.py /home/jovyan/.jupyter/jupyter_notebook_config.py
+COPY --chown=jovyan grapl-notebook/Demo_Engagement.ipynb /home/jovyan/
 RUN mkdir -p /home/jovyan/model_plugins
 
 CMD jupyter notebook
