--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -19,77 +19,77 @@ jobs:
           docker build -f .github/etc/cargo-audit/Dockerfile -t grapl/grapl-cargo-audit:latest src/rust
           docker run -t grapl/grapl-cargo-audit:latest cargo audit
 
-  rust-unit-tests:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Prepare Github Actions CI
-        run: |
-          ./etc/ci_scripts/clean_gh_actions_space.sh
-          ./etc/ci_scripts/install_requirements.sh
-
-      - name: Build Rust services
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust
-
-      - name: Rust unit tests
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust-unit-tests
-
-  python-unit-tests:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Prepare Github Actions CI
-        run: |
-          ./etc/ci_scripts/clean_gh_actions_space.sh
-          ./etc/ci_scripts/install_requirements.sh
-
-      - name: Build Python services
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python
-
-      - name: Python unit tests
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python-unit-tests
-
-  python-typecheck:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Prepare Github Actions CI
-        run: |
-          ./etc/ci_scripts/clean_gh_actions_space.sh
-          ./etc/ci_scripts/install_requirements.sh
-
-      - name: Run dobi python-typecheck
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux python-typecheck
-
-  js-unit-tests:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Prepare Github Actions CI
-        run: |
-          ./etc/ci_scripts/clean_gh_actions_space.sh
-          ./etc/ci_scripts/install_requirements.sh
-
-      - name: Build JS services
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js
-
-      - name: JS unit tests
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js-unit-tests
+#   rust-unit-tests:
+#     runs-on: ubuntu-latest
+# 
+#     steps:
+#       - uses: actions/checkout@v2
+# 
+#       - name: Prepare Github Actions CI
+#         run: |
+#           ./etc/ci_scripts/clean_gh_actions_space.sh
+#           ./etc/ci_scripts/install_requirements.sh
+# 
+#       - name: Build Rust services
+#         run: |
+#           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust
+# 
+#       - name: Rust unit tests
+#         run: |
+#           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust-unit-tests
+# 
+#   python-unit-tests:
+#     runs-on: ubuntu-latest
+# 
+#     steps:
+#       - uses: actions/checkout@v2
+# 
+#       - name: Prepare Github Actions CI
+#         run: |
+#           ./etc/ci_scripts/clean_gh_actions_space.sh
+#           ./etc/ci_scripts/install_requirements.sh
+# 
+#       - name: Build Python services
+#         run: |
+#           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python
+# 
+#       - name: Python unit tests
+#         run: |
+#           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python-unit-tests
+# 
+#   python-typecheck:
+#     runs-on: ubuntu-latest
+# 
+#     steps:
+#       - uses: actions/checkout@v2
+# 
+#       - name: Prepare Github Actions CI
+#         run: |
+#           ./etc/ci_scripts/clean_gh_actions_space.sh
+#           ./etc/ci_scripts/install_requirements.sh
+# 
+#       - name: Run dobi python-typecheck
+#         run: |
+#           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux python-typecheck
+# 
+#   js-unit-tests:
+#     runs-on: ubuntu-latest
+# 
+#     steps:
+#       - uses: actions/checkout@v2
+# 
+#       - name: Prepare Github Actions CI
+#         run: |
+#           ./etc/ci_scripts/clean_gh_actions_space.sh
+#           ./etc/ci_scripts/install_requirements.sh
+# 
+#       - name: Build JS services
+#         run: |
+#           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js
+# 
+#       - name: JS unit tests
+#         run: |
+#           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js-unit-tests
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -100,33 +100,39 @@ jobs:
       - name: Prepare Github Actions CI
         run: |
           ./etc/ci_scripts/clean_gh_actions_space.sh
-          ./etc/ci_scripts/install_requirements.sh
 
       - name: Build Grapl
         run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount build
+          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 TAG=latest GRAPL_LOG_LEVEL=DEBUG UID=$(id -u) GID=$(id -g) docker-compose build --force-rm --compress --parallel --progress plain
 
       - name: Run integration tests
         run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount integration-tests
+          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 TAG=latest GRAPL_LOG_LEVEL=DEBUG UID=$(id -u) GID=$(id -g) docker-compose up -d
+          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 TAG=latest GRAPL_LOG_LEVEL=DEBUG UID=$(id -u) GID=$(id -g) docker-compose -f docker-compose-integration-tests.yml up
+
+      - name: System stats
+        run: |
+          docker system df
+          docker image ls
+          df -h
 
   # In the future, this should probably be merged back into `dobi integration-tests`, but
   # since it's so timing-dependent I'm going to treat it separately until it stabilizes a bit.
-  end-to-end-integration-tests:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Prepare Github Actions CI
-        run: |
-          ./etc/ci_scripts/clean_gh_actions_space.sh
-          ./etc/ci_scripts/install_requirements.sh
-
-      - name: Build Grapl
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount build
-
-      - name: Run end-to-end integration tests
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount run-e2e-integration-tests
+#  end-to-end-integration-tests:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Prepare Github Actions CI
+#        run: |
+#          ./etc/ci_scripts/clean_gh_actions_space.sh
+#          ./etc/ci_scripts/install_requirements.sh
+#
+#      - name: Build Grapl
+#        run: |
+#          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount build
+#
+#      - name: Run end-to-end integration tests
+#        run: |
+#          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount run-e2e-integration-tests
