fix chalice typecheck

--- a/dobi.yaml
+++ b/dobi.yaml
@@ -520,9 +520,11 @@ job=run-e2e-integration-tests-typecheck:
 job=run-analyzer-deployer-typecheck:
   use: analyzer-deployer-build
   # since there's no setup.py, I have an explicit `pip install mypy` instead of `.[typecheck]`
+  # the `touch` is a hack for mypy until https://github.com/aws/chalice/pull/1500 is in	
   command: | 
     /bin/bash -c "
       source venv/bin/activate &&
+      touch venv/lib/python3.7/site-packages/chalice/py.typed &&	
       cd analyzer-deployer &&
       pip install mypy &&
       mypy .
@@ -531,9 +533,11 @@ job=run-analyzer-deployer-typecheck:
 job=run-model-plugin-deployer-typecheck:
   use: model-plugin-deployer-build
   # since there's no setup.py, I have an explicit `pip install mypy` instead of `.[typecheck]`
+  # the `touch` is a hack for mypy until https://github.com/aws/chalice/pull/1500 is in	
   command: | 
     /bin/bash -c "
       source venv/bin/activate &&
+      touch venv/lib/python3.7/site-packages/chalice/py.typed &&	
       cd model-plugin-deployer &&
       pip install mypy &&
       mypy .
