--- a/docker-compose-integration-tests.yml
+++ b/docker-compose-integration-tests.yml
@@ -8,7 +8,7 @@ services:
       target: grapl-rust-build
       args:
         release_target: "${GRAPL_RELEASE_TARGET:-debug}"
-        userid: "${UID}:${GID}"
+        userid: "${USERID}"
     command: /bin/bash -c 'sleep 30 && cargo test --target=x86_64-unknown-linux-musl --manifest-path node-identifier/Cargo.toml --features integration'
     environment: 
       - BUCKET_PREFIX=local-grapl
@@ -34,7 +34,7 @@ services:
       dockerfile: python/Dockerfile
       target: grapl-python-libs
       args:
-        userid: "${UID}:${GID}"
+        userid: "${USERID}"
     command: /bin/bash -c 'sleep 30 && source venv/bin/activate && cd grapl_analyzerlib && py.test -n auto -m "integration_test"'
     environment:
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-INFO}
@@ -49,7 +49,7 @@ services:
       dockerfile: python/Dockerfile
       target: analyzer-deployer-build
       args:
-        userid: "${UID}:${GID}"
+        userid: "${USERID}"
     command: bash -c 'sleep 30 && source venv/bin/activate && cd analyzer-deployer && py.test -n auto -m "integration_test"'
     environment: 
       - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-INFO}
