i cannot believe i havent debugged this yet

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -132,6 +132,7 @@ jobs:
       - name: 'Collect e2e test logs'
         if: ${{ always() }}
         run: |
+          python3 -V &&
           python3 ./etc/ci_scripts/dump_compose_logs.py --compose-project "grapl-integration-tests"
 
       - name: Prepare Github Actions CI
