--- a/src/js/grapl-cdk/dgraph/docker-compose-dgraph.yml
+++ b/src/js/grapl-cdk/dgraph/docker-compose-dgraph.yml
@@ -37,6 +37,8 @@ services:
         target: /etc/envoy/envoy.yaml
     deploy:
       mode: global
+    logging:
+      driver: awslogs
 
   zero:
     image: dgraph/dgraph:v20.07.1
@@ -51,6 +53,8 @@ services:
       placement:
         constraints:
           - node.hostname == ${AWS01_NAME}
+    logging:
+      driver: awslogs
     command: dgraph zero --my=zero:5080 --replicas 3
     depends_on:
       - envoy
@@ -72,6 +76,8 @@ services:
       placement:
         constraints:
           - node.hostname == ${AWS01_NAME}
+    logging:
+      driver: awslogs
     command: dgraph alpha --my=alpha1:7081 --lru_mb=2048 --zero=zero:5080 -o 1 --whitelist=10.0.0.0/8
     depends_on:
       - envoy
@@ -94,6 +100,8 @@ services:
       placement:
         constraints:
           - node.hostname == ${AWS02_NAME}
+    logging:
+      driver: awslogs
     command: dgraph alpha --my=alpha2:7082 --lru_mb=2048 --zero=zero:5080 -o 2 --whitelist=10.0.0.0/8
     depends_on:
       - envoy
@@ -116,6 +124,8 @@ services:
       placement:
         constraints:
           - node.hostname == ${AWS03_NAME}
+    logging:
+      driver: awslogs
     command: dgraph alpha --my=alpha3:7083 --lru_mb=2048 --zero=zero:5080 -o 3 --whitelist=10.0.0.0/8
     depends_on:
       - envoy
